@@ -1,24 +1,29 @@
 package com.GolfStore.backend.DTOMapper;
 
-import com.GolfStore.backend.dto.FilterOptionDTO;
-import com.GolfStore.backend.dto.MenuGridProductDTO;
-import com.GolfStore.backend.dto.ProductDetailDTO;
-import com.GolfStore.backend.model.CategoryFilterOption;
-import com.GolfStore.backend.model.FilterValue;
-import com.GolfStore.backend.model.Images;
-import com.GolfStore.backend.model.Product;
+import com.GolfStore.backend.dto.CartDTOs.ShoppingCartDTO;
+import com.GolfStore.backend.dto.CartDTOs.ShoppingCartItemDTO;
+import com.GolfStore.backend.dto.FilterDTOs.FilterOptionDTO;
+import com.GolfStore.backend.dto.ProductDTOs.AttributeDTO;
+import com.GolfStore.backend.dto.ProductDTOs.MenuGridProductDTO;
+import com.GolfStore.backend.dto.ProductDTOs.ProductVariantDTO;
+import com.GolfStore.backend.dto.ProductDTOs.ProductWithVariantsDTO;
+import com.GolfStore.backend.dto.ProductRepositoryDTOs.FlatVariantsDTO;
+import com.GolfStore.backend.dto.UserDTOs.UserDTO;
+import com.GolfStore.backend.model.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class DTOMapper {
 
-
+    //Product mappers--------------------------------------------------------------------------------------------------------
     public MenuGridProductDTO mapToDTOMenuGrid(Product product) {
         if (product == null) {
             throw new IllegalArgumentException("Product cant be null");
@@ -31,24 +36,42 @@ public class DTOMapper {
                 !product.getImages().isEmpty() ? product.getImages().get(0).getImageUrl() : null
         );
     }
-    public ProductDetailDTO mapToDTOProductDetail(Product product) {
-        if (product == null) {
-            throw new IllegalArgumentException("Product cant be null");
-        }
-        return new ProductDetailDTO(
-                product.getProductId(),
-                product.getProductName(),
-                product.getPrice(),
-                product.getDescription(),
-                product.getBrand().getBrandName(),
-                product.getCategory().getCategoryName(),
-                product.getHasVariants(),
+
+    public ProductWithVariantsDTO mapToProductWithVariantsDTO(Product product, List<FlatVariantsDTO> flatVariantsDTOS){
+        ProductWithVariantsDTO productWithVariantsDTO = new ProductWithVariantsDTO();
+
+        productWithVariantsDTO.setProductName(product.getProductName());
+        productWithVariantsDTO.setPrice(product.getPrice());
+        productWithVariantsDTO.setDescription(product.getDescription());
+        productWithVariantsDTO.setImageUrls(
                 product.getImages().stream()
-                        .map(Images::getImageUrl) //
-                        .collect(Collectors.toList())
+                        .map(Images::getImageUrl)
+                        .toList()
         );
 
+        Map<Integer, List<AttributeDTO>> variantMap = new LinkedHashMap<>();
+
+        for (FlatVariantsDTO row : flatVariantsDTOS) {
+            Integer variantId = row.getVariantId();
+            AttributeDTO attributeDTO = new AttributeDTO(
+                    row.getAttributeName(),
+                    row.getAttributeValue(),
+                    row.isMainAttribute()
+            );
+            variantMap.computeIfAbsent(variantId, k -> new ArrayList<>()).add(attributeDTO);
+        }
+
+        List<ProductVariantDTO> variantDTOs = variantMap.entrySet().stream()
+                .map(entry -> new ProductVariantDTO(entry.getKey(), entry.getValue()))
+                .toList();
+
+        productWithVariantsDTO.setVariants(variantDTOs);
+        return productWithVariantsDTO;
+
     }
+
+    //Filter mappers---------------------------------------------------------------------------------------------------------
+
     public List<FilterOptionDTO> mapToDTOFilterOptions(List<CategoryFilterOption> cfos){
         List<FilterOptionDTO> filterOptionDTOList = new ArrayList<>();
 
@@ -62,6 +85,43 @@ public class DTOMapper {
             filterOptionDTOList.add(filterOptionDTO);
         }
         return filterOptionDTOList;
+    }
+
+    //ShoppingCart Mappers---------------------------------------------------------------------------------------------------
+
+    public ShoppingCartDTO mapToShoppingCartDTO(ShoppingCart cart, List<ShoppingCartItem> shoppingCartItems) {
+        List<ShoppingCartItemDTO> itemDTOs = mapToShoppingCartItemDTOList(shoppingCartItems);
+        return new ShoppingCartDTO(cart.getShoppingCartId(), itemDTOs);
+    }
+
+    public List<ShoppingCartItemDTO> mapToShoppingCartItemDTOList(List<ShoppingCartItem> shoppingCartItems) {
+        List<ShoppingCartItemDTO> dtos = new ArrayList<>();
+        for (ShoppingCartItem item : shoppingCartItems) {
+            ProductVariant variant = item.getProductVariant();
+            Product product = variant.getProduct();
+            dtos.add(new ShoppingCartItemDTO(
+                    product.getProductId(),
+                    variant.getVariantId(),
+                    product.getProductName(),
+                    product.getPrice(),
+                    item.getAmount(),
+                    product.getImages().get(0).getImageUrl()
+            ));
+        }
+        return dtos;
+    }
+
+    //User Mappers-----------------------------------------------------------------------------------------------------------
+
+    public UserDTO mapToUserDTO(User user) {
+        return new UserDTO(
+                user.getKeycloakId(),
+                user.getFirstName(),
+                user.getLastName(),
+                user.getEmail(),
+                user.getAddress(),
+                user.getPhone()
+        );
     }
 
 }
